[package]
name = "experimental-patcher"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.19", features = ["cargo"] }
fanttheysia-common = { path = "../fanttheysia-common" }
nom = "7.1.0"
tomestone-exdf = { path = "../tomestone-exdf" }
tomestone-sqpack = { path = "../tomestone-sqpack" }
tomestone-string-interp = { path = "../tomestone-string-interp" }
