[package]
name = "fanttheysia-cli"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "env"] }
dotenvy = "0.15.6"
fanttheysia-common = { path = "../fanttheysia-common" }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9.14"
tomestone-exdf = { path = "../tomestone-exdf" }
tomestone-sqpack = { path = "../tomestone-sqpack" }
tomestone-string-interp = { path = "../tomestone-string-interp" }
