[package]
name = "fanttheysia-common"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
tomestone-string-interp = { path = "../tomestone-string-interp" }

[dev-dependencies]
serde_yaml = "0.9.17"
