[package]
name = "fanttheysia-webapp-backend"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.10.0"
dotenv = "0.15.0"
tide = "0.16.0"
tomestone-exdf = { path = "../tomestone-exdf" }
tomestone-sqpack = { path = "../tomestone-sqpack" }
tomestone-string-interp = { path = "../tomestone-string-interp" }
