[package]
name = "fanttheysia-webapp-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
dotenvy = "0.15.6"
fanttheysia-common = { path = "../fanttheysia-common" }
gloo-console = "0.2.1"
gloo-events = "0.1.1"
gloo-file = "0.2.1"
gloo-storage = "0.2.0"
gloo-timers = "0.2.3"
gloo-worker = "0.1.0"
lazy_static = "1.4.0"
monaco = { version = "0.3.0", features = ["yew-components"] }
serde = "1.0.136"
serde_yaml = "0.8.23"
tomestone-string-interp = { path = "../tomestone-string-interp" }
wasm-bindgen =  "0.2.80"
web-sys = { version = "0.3.57", features = ["Document", "Element", "HtmlAnchorElement"] }
yew = "0.19.3"
