[package]
name = "tomestone-dump"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["cargo", "env"] }
dotenv = "0.15.0"
hex = "0.4.2"
once_cell = "1.5.2"
regex = "1.4.3"
tomestone-exdf = { path = "../tomestone-exdf" }
tomestone-sqpack = { path = "../tomestone-sqpack" }
tomestone-string-interp = { path = "../tomestone-string-interp" }

[dev-dependencies]
tempfile = "3.3.0"
tomestone-common = { path = "../tomestone-common" }
trycmd = "0.8.3"
