[package]
name = "tomestone-dump"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.0", features = ["cargo", "env"] }
dotenvy = "0.15.6"
hex = "0.4.2"
once_cell = "1.17.1"
regex = "1.7.0"
tomestone-exdf = { path = "../tomestone-exdf" }
tomestone-sqpack = { path = "../tomestone-sqpack" }
tomestone-string-interp = { path = "../tomestone-string-interp" }

[dev-dependencies]
tempfile = "3.8.0"
tomestone-common = { path = "../tomestone-common" }
trycmd = "0.14.10"
