[package]
name = "tomestone-exdf"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
nom = "7.1.0"
tomestone-common = { path = "../tomestone-common" }
tomestone-sqpack = { path = "../tomestone-sqpack" }

[dev-dependencies]
dotenvy = "0.15.6"
