[package]
name = "tomestone-sqpack"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }

[dependencies]
crc32fast = "1.3.2"
directories = "4.0"
miniz_oxide = "0.6.2"
nom = "7.1.0"
once_cell = "1.11.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.21.0"
regex = "1.4.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
sha-1 = "0.10.0"
tomestone-common = { path = "../tomestone-common" }

[dev-dependencies]
dotenvy = "0.15.6"
hex = "0.4.2"
tempfile = "3.3.0"
quickcheck = "1.0.3"
