[package]
name = "tomestone-string-interp"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"

[dependencies]
nom = "7.1.0"
serde = "1.0.178"

[dev-dependencies]
dotenvy = "0.15.6"
serde_test = "1.0.160"
serde_yaml = "0.9.17"
tomestone-common = { path = "../tomestone-common" }
tomestone-exdf = { path = "../tomestone-exdf" }
tomestone-sqpack = { path = "../tomestone-sqpack" }
quickcheck = "1.0.3"
